# ducklake

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
cdc-lambda/: .env.example  Cargo.toml
cdc-lambda/src/: main.rs
ducklake-setup/src/: settings.py
postgres/init/: 01_create_checkpoints.sql
setup/: Dockerfile  entrypoint.sh
spark-ducklake/: .coverage  Dockerfile  README.md  pyproject.toml
spark-ducklake/src/spark_ducklake/: connection.py  datasource.py  parquet_writer.py  pool.py  reader.py  writer.py
spark-ducklake/tests/: test_connection.py  test_datasource.py  test_integration.py  test_parquet_writer.py  test_pool.py  test_reader.py  test_writer.py
src/: main.py  settings.py
