[package]
name = "cdc-lambda"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
duckdb = { version = "1.10501.0", features = ["bundled"] }
envy = "0.4.2"
lambda_runtime = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.44", features = ["full"] }
tokio-postgres = "0.7.17"
