[project]
name = "spark-ducklake"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyspark>=4.0",
    "duckdb>=1.5.2",
    "pyarrow>=23.0.1",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
