[project]
name = "spark-ducklake"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyspark>=4.1",
    "duckdb>=1.5.2",
    "pyarrow>=23.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
addopts = "--cov=spark_ducklake --cov-report=term-missing"

[tool.coverage.run]
source = ["spark_ducklake"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
